Update README.md
Updated the description and provided component diagram